# supreme-drafter

./: .gitignore  404.html  CHANGELOG-peer-review.md  CNAME  FLUXOS.md  Makefile  NEXUM_CONGLOBADO_V18.md  README.md  agravo-brunno-sena-falta-grave.html  api-spec.json  conftest.py  controladoria.html  dashboard.html  docker-compose.yml  grafo.html  index.html  manual-joao-felipe.html  nexum.html  planos.html  railway.toml  resp-diagnostico-tigre.html  resp-frederico-xavier-abuso.html  resp-joao-marcos.html  resp-raphael-lopes-impronuncia.html  rhc-henrique-moraes-consuncao.html  robots.txt  sitemap.xml  war-room.html  wrangler.jsonc
engine/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
engine/alembic/: env.py
engine/alembic/versions/: 0001_users_table.py  0002_subscriptions_table.py  0003_stripe_tables.py  0004_audits_table.py  0005_user_tos_version.py
engine/src/nexum/: api.py  auth.py  dado_liquido.py  halt.py  llm.py  quality.py  upload.py
engine/src/nexum/casos/: data.py
engine/src/nexum/templates/: hc.md.j2
engine/src/nexus/: api.py  auth.py  llm.py  models.py  primitives.py  quality.py  upload.py
engine/src/nexus/auditor/: __init__.py  service.py
engine/src/nexus/audits/: __init__.py  romaneio.py  routes.py  schemas.py  service.py
engine/src/nexus/auth/: __init__.py  deps.py  jwt.py  passwords.py  routes.py  schemas.py  service.py
engine/src/nexus/billing/: __init__.py  checkout.py  plans.py  routes.py  schemas.py  service.py  stripe_client.py  webhook.py
engine/src/nexus/casos/: data.py
engine/src/nexus/db/: models.py  session.py
engine/src/nexus/dossier/: __init__.py  adapter.py  schema.py
engine/src/nexus/legal/: __init__.py  disclaimer.py
engine/src/nexus/middleware/: __init__.py  rate_limit.py
engine/src/nexus/templates/: edcl.md.j2  hc.md.j2  rcl.md.j2  rhc.md.j2
engine/src/nexus/user_data/: __init__.py  routes.py  service.py
engine/tests/: conftest.py  test_api.py  test_auditor.py  test_auth.py  test_billing.py  test_billing_checkout.py  test_billing_webhook.py  test_dado_liquido.py  test_db.py  test_dossier_hunter.py  test_draft_llm.py  test_halt.py  test_llm.py  test_models.py  test_quality.py  test_romaneio.py  test_templates.py  test_upload.py  test_user_audits.py  test_user_data_lgpd.py
(+150 files in other folders)
