[project]
name = "nexum"
version = "0.1.0"
description = "Nexum by Tigre — engine de redação jurídica criminal"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
