[project]
name = "nexus"
version = "0.1.0"
description = "Nexus by Tigre — engine de redação jurídica criminal"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "fastapi>=0.115",
    "pydantic[email]>=2.9",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "uvicorn>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
